# obsidianite

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/: main.py
src/obsidianite/: __init__.py  helper.py  note.py  notes.py
src/tests/: test_helper.py  test_note.py  test_notes.py
src/tests/data/vault/: index.md
src/tests/data/vault/folder/: data.md
