[project]
name = "obsidianite"
version = "0.2.0"
description = "A simple python package to process Obsidian Markdown Notes"
readme = "README.md"
authors = [
    { name = "Sascha Mario Klein", email = "sascha@neuroticfish.com" }
]
requires-python = ">=3.10"

dependencies = [
    "pyaml>=25.7.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.5",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.scripts]
obsidianite = "obsidianite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
